--- a/assignments/hybrid-layout/layout.css
+++ b/assignments/hybrid-layout/layout.css
@@ -6,97 +6,6 @@ body {
   background-color: #522D80; /* Clemson Purple */
   color: #FFFFFF;
 }
-/* Navbar Styles */
-.navbar {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 4.5em;
-  background-color: #522D80;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-}
-
-.navbar-menu {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100%;
-}
-
-.navbar-item {
-  position: relative;
-}
-
-.navbar a {
-  display: block;
-  padding: 1.2em 2em;
-  color: white;
-  text-decoration: none;
-  font-weight: 500;
-  transition: all 0.3s ease-in-out;
-}
-
-.navbar a:hover {
-  background-color: #444;
-}
-
-/* Dropdown Menu */
-.nav-dropdown {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 200px;  /* Adjust the width for proper alignment */
-  background: #333;
-  list-style: none;
-  padding: 0;
-  border-radius: 5px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-  z-index: 1001;
-}
-
-.nav-dropdown-item a {
-  padding: 12px 20px;
-  display: block;
-  text-align: left;
-  color: white;
-  text-decoration: none;
-  transition: all 0.3s ease-in-out;
-}
-
-.nav-dropdown-item a:hover {
-  background-color: #555;
-}
-
-/* Show dropdown on hover */
-.navbar-item:hover .nav-dropdown {
-  display: block;
-}
-
-/* Responsive Design */
-@media (max-width: 768px) {
-  .navbar {
-      height: auto;
-  }
-
-  .navbar-menu {
-      flex-direction: column;
-  }
-
-  .navbar a {
-      padding: 1em;
-  }
-
-  .nav-dropdown {
-      width: 100%;
-      position: static;
-  }
-}
 
 header {
   float: left;
@@ -119,13 +28,14 @@ footer {
 }
 
 #wrapper {
-  position: relative;
+  display: flex;
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
   padding-left: 125px;
   padding-right: 125px;
   box-sizing: border-box;
+  min-height: auto;
 }
 
 #right_side {
