--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,11 +1,16 @@
 .footer {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     background-color: #282424;
-    color: #ffffff;          
+    color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0.5em 1em;
     box-sizing: border-box;
+    z-index: 1000;
 }
   
 .footer-icons a {
