--- a/group_assignments/ga5/hangm.css
+++ b/group_assignments/ga5/hangm.css
@@ -1,9 +1,8 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin: 20px;
+    font-family: 'Heebo', 'Arial', Times, serif;
+    margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background: #F9F6EE;
 }
   
 header h1 {
